--- a/plugin/src/main/resources/GUI/META-INF/resources/uii/template/reduced_content_template.html
+++ b/plugin/src/main/resources/GUI/META-INF/resources/uii/template/reduced_content_template.html
@@ -248,6 +248,8 @@
 
 
 
+                /*
+                // show inline help
                 const form = document.querySelector('form');
                 form.addEventListener('click', handleClick);
 
@@ -258,6 +260,8 @@
                         helpText.classList.toggle('vis-hidden');
                     }
                 }
+
+                */
 
 
 
