submit second email field

--- a/plugin/src/main/resources/GUI/META-INF/resources/uii/template/account_creation_wizzard.xhtml
+++ b/plugin/src/main/resources/GUI/META-INF/resources/uii/template/account_creation_wizzard.xhtml
@@ -165,7 +165,7 @@
                     inputId="emailAddress2"
                     inputAriaLabel="#{msgs.login_new_account_emailAddress2}"
                     inputForceId="true"
-                    inputValue="#{externalLoginBean.emailAddress}"
+                    inputValue="#{externalLoginBean.confirmEmailAddress}"
                     inputRequired="true"
                     inputPlaceholder="#{msgs.login_new_account_emailAddress}" />
 
