Style wizzard page 2

--- a/plugin/src/main/resources/GUI/META-INF/resources/uii/template/assets/css/src/index.scss
+++ b/plugin/src/main/resources/GUI/META-INF/resources/uii/template/assets/css/src/index.scss
@@ -24,6 +24,7 @@
   --clr-primary-200: rgb(110, 23, 105, 0.6);
   --clr-primary-400: #6e1769;
   --clr-secondary-400: #727c87;
+  --clr-secondary-400: #4d595b;
   --clr-neutral-400: #eeeeee;
   --clr-neutral-600: #c4c4c4;
   --clr-neutral-800: #6e747c;
