--- a/plugin/src/main/resources/GUI/META-INF/resources/uii/template/account_creation_wizzard.xhtml
+++ b/plugin/src/main/resources/GUI/META-INF/resources/uii/template/account_creation_wizzard.xhtml
@@ -29,21 +29,6 @@
             </button>
         </h2>
 
-        <zlb:modal
-            modalId="pageHelpModal"
-            modalTitle="Seiten Hilfe"
-            >
-
-            <!-- Dummy child, will be replaced later -->
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Culpa ratione totam itaque. Dignissimos quasi nam rerum provident commodi esse cumque architecto culpa, delectus asperiores nisi tempore, incidunt natus praesentium ex?</p>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Culpa ratione totam itaque. Dignissimos quasi nam rerum provident commodi esse cumque architecto culpa, delectus asperiores nisi tempore, incidunt natus praesentium ex?</p>
-
-            <img src="https://via.placeholder.com/700x350" class="modal__img"/>
-
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Culpa ratione totam itaque. Dignissimos quasi nam rerum provident commodi esse cumque architecto culpa, delectus asperiores nisi tempore, incidunt natus praesentium ex?</p>
-
-        </zlb:modal>
-
 
           <section class="common-region">
             <!-- account name -->
@@ -230,10 +215,6 @@
             </div>
             </section> <!-- end common-region -->
 
-            <zlb:modal
-                modalId="exampleModal"
-            >
-            </zlb:modal>
 
             <div class="form-actions">
                 <!-- cancel button -->
@@ -261,7 +242,12 @@
             <h2>
                 <h:outputText value="#{msgs.login_new_institution}" />
             </h2>
+
+
+          <section class="common-region">
             <div class="form-floating">
+
+                <!--
                 <h:outputLabel
                     for="institutionName"
                     value="#{msgs.login_new_account_institutionName}" />
@@ -293,6 +279,24 @@
                         rendered="#{NavigationForm.showHelp}"
                         value="#{fieldy.login_new_account_institutionNameHelp}" />
                 </div>
+                -->
+
+                <zlb:input
+                    inputId="institutionName"
+                    inputAriaLabel="#{msgs.login_new_account_institutionName}"
+                    inputForceId="true"
+                    inputValue="#{externalLoginBean.institutionName}"
+                    inputRequired="false"
+                    inputPlaceholder=""
+                    inputDuplicate="true"
+                    showHelpBtn="true"
+                    helpText="lorem ipsum" />
+
+                <zlb:label
+                    labelFor="institutionName"
+                    labelText="#{msgs.login_new_account_institutionName}"
+                    labelRequired="true" />
+
             </div>
 
             <ui:repeat
@@ -300,14 +304,31 @@
                 value="#{externalLoginBean.additionalFields['page2']}">
 
                 <div class="form-floating">
-                    <h:outputLabel value="#{field.label}" />
+
+                <zlb:input
+                    inputId="input"
+                    inputAriaLabel="#{field.label}"
+                    inputForceId="true"
+                    inputValue="#{filed.value}"
+                    inputRequired="false"
+                    inputPlaceholder=""
+                    inputDuplicate="false"
+                    showHelpBtn="true"
+                    helpText="lorem ipsum" />
+
+                <zlb:label
+                    labelFor="input"
+                    labelText="#{field.label}"
+                    labelRequired="#{field.required}" />
+
+                    <!--
+                    <h:outputLabel value="{field.label}" />
                     <i
                         jsf:rendered="#{field.required}"
                         class="fa fa-asterisk pull-right font-asterisk"
                         title="#{msgs.requiredField}"
                         data-toggle="tooltip" />
 
-                    <div class="email controls">
                         <x:inputText
                             id="input"
                             rendered="#{field.fieldType=='input'}"
@@ -321,6 +342,8 @@
                                 name="placeholder"
                                 value="" />
                         </x:inputText>
+                    -->
+                    <div class="email controls">
                         <x:inputTextarea
                             id="textarea"
                             rendered="#{field.fieldType=='textarea'}"
@@ -381,6 +404,7 @@
                     </div>
                 </div>
             </ui:repeat>
+            </section>
         </ui:fragment>
 
         <ui:fragment rendered="#{externalLoginBean.wizzardMode=='page3'}">
@@ -612,12 +636,12 @@ Freischaltung:* Hiermit beantrage ich die Freischaltung zur Ablieferung digitale
 </ui:fragment>
 
         <ui:fragment rendered="#{externalLoginBean.wizzardMode!='page1'}">
-            <div class="submit">
+            <div class="submit form-actions">
                 <button
                     jsf:rendered="#{externalLoginBean.wizzardMode!='page2'}"
                     jsf:action="#{externalLoginBean.back}"
                     jsf:id="goBack"
-                    class="float-left btn btn-primary font-size-s">
+                    class="btn btn-primary-400">
                     <h:outputText value="#{msgs.back}" />
                 </button>
 
@@ -626,7 +650,7 @@ Freischaltung:* Hiermit beantrage ich die Freischaltung zur Ablieferung digitale
                     jsf:id="goNext"
                     jsf:action="#{externalLoginBean.next}"
                     style="margin-bottom: 20px;"
-                    class="btn btn-primary font-size-s pull-right">
+                    class="btn btn-primary-400">
                     <h:outputText value="#{msgs.next}" />
                 </button>
 
@@ -635,7 +659,7 @@ Freischaltung:* Hiermit beantrage ich die Freischaltung zur Ablieferung digitale
                     jsf:id="createInsitution"
                     jsf:action="#{externalLoginBean.createInstitution}"
                     style="margin-bottom: 20px;"
-                    class="btn btn-primary font-size-s pull-right">
+                    class="btn btn-primary-400">
                     <h:outputText value="#{msgs.createInsitution}" />
 
                 </button>
@@ -643,6 +667,27 @@ Freischaltung:* Hiermit beantrage ich die Freischaltung zur Ablieferung digitale
             </div>
 
         </ui:fragment>
+
+        <zlb:modal
+            modalId="exampleModal"
+        >
+        </zlb:modal>
+
+        <zlb:modal
+            modalId="pageHelpModal"
+            modalTitle="Seiten Hilfe"
+            >
+
+            <!-- Dummy child, will be replaced later -->
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Culpa ratione totam itaque. Dignissimos quasi nam rerum provident commodi esse cumque architecto culpa, delectus asperiores nisi tempore, incidunt natus praesentium ex?</p>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Culpa ratione totam itaque. Dignissimos quasi nam rerum provident commodi esse cumque architecto culpa, delectus asperiores nisi tempore, incidunt natus praesentium ex?</p>
+
+            <img src="https://via.placeholder.com/700x350" class="modal__img"/>
+
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Culpa ratione totam itaque. Dignissimos quasi nam rerum provident commodi esse cumque architecto culpa, delectus asperiores nisi tempore, incidunt natus praesentium ex?</p>
+
+        </zlb:modal>
+
 
     </composite:implementation>
 
