--- a/plugin/src/main/resources/GUI/META-INF/resources/uii/includes/header.xhtml
+++ b/plugin/src/main/resources/GUI/META-INF/resources/uii/includes/header.xhtml
@@ -12,7 +12,8 @@
 </composite:interface>
 
 <composite:implementation>
-<header class="container-fluid">
+<header class="header">
+    <div class="container-fluid header__upper">
     <div class="brand">
         <img src="template/assets/img/ZLB_logo_small_white.png" alt="" class="brand__logo" />
         <div class="brand__copy">
@@ -22,10 +23,6 @@
     </div>
 
     <div class="actions">
-        <div class="actions__help">
-        <ui:include src="/uii/includes/icon-help.xhtml" />
-            Hilfe
-        </div>
         <div class="actions__lang">
 			      <ui:include src="/uii/includes/icon-language.xhtml" />
             Language
@@ -35,6 +32,25 @@
 			      <ui:include src="/uii/includes/icon-logo-intranda.xhtml" />
         </div>
     </div>
+    </div>
+    <div class="container-fluid header__lower">
+
+			      <ui:include src="../includes/icon-logo-goobi.xhtml" />
+            <h1>
+                <a href="index.xhtml">
+                    <h:outputText
+                        escape="false"
+                        value="ZLB E-Pflicht" />
+                </a>
+
+            </h1>
+
+        <div class="actions__help">
+            <ui:include src="/uii/includes/icon-info.xhtml" />
+            Hilfe
+        </div>
+    </div>
+
 </header>
 
 </composite:implementation>
