--- a/plugin/src/main/resources/GUI/META-INF/resources/uii/template/assets/css/src/index.scss
+++ b/plugin/src/main/resources/GUI/META-INF/resources/uii/template/assets/css/src/index.scss
@@ -36,6 +36,7 @@
   --clr-text-light: #ffffff;
 
   /* Sizing */
+  --fs-100: 1.2rem;
   --fs-200: 1.4rem;
   --fs-400: 1.6rem;
   --height-footer-and-nav: 139px;
@@ -256,6 +257,8 @@ main h1 svg {
 
 /* BS overrides */
 
+/*
+ * Todo: DELETE IF NO FLOATING LABELS
 .form-floating > .form-control,
 .form-floating > .form-select {
   height: calc(5.6rem + 2px);
@@ -268,10 +271,13 @@ main h1 svg {
   font-size: 1.4rem;
 }
 
+*/
+
 /* custom styles */
-.form-floating {
+.form {
+  position: relative;
   display: grid;
-  grid-template-columns: 4fr 9rem;
+  grid-template-columns: 4fr 6rem;
   align-items: center;
   @media screen and (max-width: 620px) {
     --grid-tc: 100%;
@@ -279,10 +285,23 @@ main h1 svg {
   &--full-width input {
     grid-column: 1 / -1;
   }
-}
 
-input {
-  grid-column: 1;
+  label {
+    margin-bottom: 0.8rem;
+    font-size: 1.6rem;
+    color: var(--clr-text-body);
+  }
+  input {
+    height: 3.8rem;
+    grid-column: 1;
+  }
+
+  .email.controls {
+    color: var(--clr-neutral-800);
+    font-size: var(--fs-200);
+    position: absolute;
+    bottom: -24px;
+  }
 }
 
 .help-text {
@@ -310,8 +329,8 @@ input {
   cursor: pointer;
 
   &__button {
-    width: 4.4rem;
-    height: 4.4rem;
+    width: 3.2rem;
+    height: 3.2rem;
     margin-inline-start: 0.2rem;
     background-color: transparent;
     border: 0;
@@ -404,7 +423,7 @@ input {
 .footer a:focus,
 .footer a:hover,
 .footer a:active {
-  color: var(--clr-primary-400);
+  color: var(--clr-accent);
   text-decoration: underline;
 }
 
@@ -414,6 +433,8 @@ input {
   display: grid;
   grid-template-columns: var(--grid-tc);
   gap: var(--gap);
+  row-gap: calc(var(--gap) + 1rem);
+  column-gap: calc(var(--gap) + 3rem);
   padding: 3.2rem 2.4rem;
 
   border: 1px solid var(--border-color);
