Refactor frontend JS; refs #22594

--- a/plugin/src/main/resources/GUI/META-INF/resources/uii/template/reduced_content_template.html
+++ b/plugin/src/main/resources/GUI/META-INF/resources/uii/template/reduced_content_template.html
@@ -116,6 +116,10 @@
 			});
 		</script>
 	<![endif]-->
+
+  <!-- Custom ZLB E-Pflicht scripsts -->
+
+    <script src="template/assets/js/script.js?v=#{HelperForm.buildVersion}"></script>
     <!-- Favicon -->
     <link
         rel="shortcut icon"
@@ -233,41 +237,12 @@
             -->
         <script>
 
-
-
             // goobiWorkflowConfig = {};
 
             // goobiWorkflowJS.init(goobiWorkflowConfig);
 
+        </script>
 
-
-                                </script>
-
-
-            <script>
-
-
-
-                /*
-                // show inline help
-                const form = document.querySelector('form');
-                form.addEventListener('click', handleClick);
-
-                function handleClick(e) {
-                    if(e.target.classList.contains('form-icons__button--help')) {
-                        const formElement = e.target.parentElement.parentElement
-                        const helpText = formElement.querySelector('.help-text');
-                        helpText.classList.toggle('vis-hidden');
-                    }
-                }
-
-                */
-
-
-
-
-
-            </script>
 
         <script>
 
@@ -308,11 +283,6 @@
                         }
                         break;
                 }
-            });
-
-            var tooltipTriggerList = [].slice.call(document.querySelectorAll('[data-bs-toggle="tooltip"], [data-toggle="tooltip"]'))
-            var tooltipList = tooltipTriggerList.map(function (tooltipTriggerEl) {
-              return new bootstrap.Tooltip(tooltipTriggerEl)
             });
 
 
